[package]
name = "kernel"
authors = ["wick3dr0se <wick3dr0se@protonmail.com>"]
version = "0.0.1"
edition = "2021"

[workspace]
members = ["disk_image"]

[[bin]]
name="kernel"
path="kernel.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.26.0"